# u2-listas-agustin-salvay-2305505

./: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  Ej1.cpp  Ej2.cpp  Ej3.cpp  ej4.cpp  ej5.cpp  ej6.cpp  ej7.cpp  ej8.cpp  ej9.cpp  node.cpp  node.h
ej4/: CMakeLists.txt
ej7/: CMakeLists.txt
ej9/: CMakeLists.txt
