cmake_minimum_required(VERSION 3.17)
project(Plantilla_A1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ej1 Ej1.cpp
        node.cpp
        node.h
        DoubleLinkedList.cpp
        DoubleLinkedList.h)
add_executable(Ej2 Ej2.cpp)
add_executable(Ej3 Ej3.cpp)
add_executable(Ej7 Ej7.cpp)
add_executable(Ej9 Ej9.cpp
        node.cpp
        node.h
        DoubleLinkedList.cpp
        DoubleLinkedList.h)
